@@ -2533,7 +2533,8 @@ Supported protocols: <tt>$1</tt>',
 
 # Special:ActiveUsers
 'activeusers'          => 'Active users list',
-'activeusers-summary'  => '', # do not translate or duplicate this message to other languages
+#'activeusers-summary'  => '', # do not translate or duplicate this message to other languages
+'activeusers-intro'    => 'This is a list of users who had some kind of activity within the last $1 {{PLURAL:$1|day|days}}.',
 'activeusers-count'    => '$1 {{PLURAL:$1|edit|edits}} in the last {{PLURAL:$3|day|$3 days}}',
 'activeusers-from'     => 'Display users starting at:',
 'activeusers-noresult' => 'No users found.',
